--- a/Task1/indexDiv.html
+++ b/Task1/indexDiv.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Block layout</title>
         <link rel="stylesheet" href="./styleDiv.css" />
     </head>
     <body>
