--- a/Task3/index.html
+++ b/Task3/index.html
@@ -15,9 +15,9 @@
             <h1>Task3</h1>
         </header>
         <div class="menu">
-            <a href="/Task1/indexTable.html">Табличная вёрстка</a>
-            <a href="/Task1/indexDiv.html">Блочная вёрстка</a>
-            <a href="/Task2/index.html">Третье задание</a>
+            <a href="../Task1/indexTable.html">Табличная вёрстка</a>
+            <a href="../Task1/indexDiv.html">Блочная вёрстка</a>
+            <a href="../Task2/index.html">Третье задание</a>
         </div>
         <div class="content">
             <h2>Считалочка</h2>
